--- a/.github/workflows/ai-apply.yml
+++ b/.github/workflows/ai-apply.yml
@@ -18,22 +18,18 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Extract diff block
+      - name: Extract diff block from comment
         id: extract
-        run: |
-          python - << 'PY'
-import os, re, sys
-body = os.environ['BODY']
-m = re.search(r"```diff(.*?)```", body, re.S|re.I)
-if not m:
-    print("::error::Не найден блок ```diff ... ``` в комментарии.")
-    sys.exit(1)
-patch = m.group(1).strip()
-open("ai_patch.diff","w",encoding="utf-8").write(patch+"\n")
-print("patch_file=ai_patch.diff", file=open(os.environ["GITHUB_OUTPUT"],"a"))
-PY
-        env:
-          BODY: ${{ github.event.comment.body }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const body = context.payload.comment.body || '';
+            const m = body.match(/```diff\s*([\s\S]*?)```/i);
+            if (!m) {
+              core.setFailed('Не найден блок ```diff ... ``` в комментарии.');
+            } else {
+              require('fs').writeFileSync('ai_patch.diff', m[1].trim() + '\n');
+            }
 
       - name: Create branch
         run: |
@@ -55,4 +51,6 @@ PY
         with:
           branch: "ai/patch-${{ github.run_id }}"
           title: "AI patch ${{ github.run_id }}"
-          body: "PR создан автоматически из комментария с командой /apply."
+          body: |
+            PR создан автоматически из комментария с командой /apply.
+            Источник: ${{ github.event.comment.html_url }}
