--- a/.github/workflows/ai-apply.yml
+++ b/.github/workflows/ai-apply.yml
@@ -23,12 +23,26 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const body = context.payload.comment.body || '';
-            const m = body.match(/```diff\s*([\s\S]*?)```/i);
-            if (!m) {
-              core.setFailed('Не найден блок ```diff ... ``` в комментарии.');
+            const fs = require('fs');
+            const body = (context.payload.comment.body || '').trim();
+
+            // 1) Пытаемся найти fenced-блок ```diff ... ```
+            const fence = body.match(/```(?:diff|patch)?\s*([\s\S]*?)```/i);
+
+            let diffText = '';
+            if (fence && fence[1]) {
+              diffText = fence[1].trim();
             } else {
-              require('fs').writeFileSync('ai_patch.diff', m[1].trim() + '\n');
+              // 2) Фолбэк: всё, что после первого "diff --git"
+              const idx = body.indexOf('diff --git');
+              if (idx !== -1) diffText = body.slice(idx).trim();
+            }
+
+            if (!diffText) {
+              core.setFailed('Не найден патч. Вставь блок ```diff ...``` или начни текст с "diff --git".');
+            } else {
+              fs.writeFileSync('ai_patch.diff', diffText + '\n');
+              core.info('Patch extracted OK');
             }
 
       - name: Create branch
